--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -61,11 +61,11 @@
   {Duplication is the \ul{primary enemy} of a well-designed system.}
   {martin2008clean}
 
-\lnQuote
-  [Qurat Ul Ain]
-  {qurat-ul-ain}
-  {If a bug is identified in one segment of code, all the similar segments need to be \ul{checked} for the same bug. Consequently, code duplication may lead to bug propagation that significantly affects the maintenance cost.}
-  {ain2019}
+% \lnQuote
+%   [Qurat Ul Ain]
+%   {qurat-ul-ain}
+%   {If a bug is identified in one segment of code, all the similar segments need to be \ul{checked} for the same bug. Consequently, code duplication may lead to bug propagation that significantly affects the maintenance cost.}
+%   {ain2019}
 
 \lnQuote
   [Rainer Koschke]
