--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -174,6 +174,11 @@ void main(int x) {
   {Before monorepo, I had to upgrade every package manually, which resulted in dissonance: one package used Symfony\textbackslash{}Console 3.2, but other only 2.8 and it got messy \ul{for no reason}.}
   {votruba2017}
 
+\lnPitch{
+  \pptBanner{What About Yandex?}
+  \pptPic{.8}{yandex-repo.png}
+  \lnSource{kruglov2018yandex}}
+
 \lnPitch{\pptBanner{Benefits of ``Manyrepo'' Approach}
   {\small\begin{description}
   \item[Encapsulation]
