--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -159,13 +159,13 @@ void main(int x) {
 \lnQuote
   [Rachel Potvin]
   {rachel-potvin}
-  {The Google codebase includes approximately \ul{one billion files} and has a history of approximately 35 million commits spanning Google's entire 18-year existence. The repository contains \ul{86TBa} of data, including approximately \ul{two billion lines of code} in nine million unique source files.}
+  {The \textcolor{orange}{Google} codebase includes approximately \ul{one billion files} and has a history of approximately 35 million commits spanning Google's entire 18-year existence. The repository contains \ul{86TBa} of data, including approximately \ul{two billion lines of code} in nine million unique source files.}
   {potvin2016}
 
 \lnQuote
   [Durham Goode]
   {durham-goode}
-  {Facebook's main source repository is enormous---many times larger than even the Linux kernel, which checked in at \ul{17 million lines of code} and \ul{44,000 files} in 2013.}
+  {\textcolor{orange}{Facebook}'s main source repository is enormous---many times larger than even the Linux kernel, which checked in at \ul{17 million lines of code} and \ul{44,000 files} in 2013.}
   {goode2014}
 
 \lnQuote
