--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -99,6 +99,14 @@ void main(int x) {
   {romano2018}
 
 \plush{
+  \begin{multicols}{2}
+  \includegraphics[width=\linewidth]{born-dead.png}
+  \par\columnbreak\par
+  ``\begin{inparaenum}[i)]\item ...; \item dead methods generally \ul{survive} for a long time, in terms of commits, before being buried or revived; \item dead methods are \ul{rarely revived}; and \item most dead methods are dead \ul{since the creation} of the corresponding methods.\end{inparaenum}''
+  \lnSource{caivano2021exploratory}
+  \end{multicols}}
+
+\plush{
   \pptBanner{Volatility Metric}
   \begin{multicols}{2}
   \scalebox{.7}{\begin{tikzpicture}[every node/.style={rectangle, minimum width=1em, fill=gray, anchor=south west, font={\color{white}}, inner sep=0pt}]
