--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -107,6 +107,14 @@ void main(int x) {
   \end{multicols}}
 
 \plush{
+  \begin{multicols}{2}
+  \includegraphics[width=\linewidth]{js-deads.png}
+  \par\columnbreak\par
+  ``The elimination of JavaScript dead code leads to noticeable (and statistically significant) differences in terms of the number of performed HTTP requests only for in-the-lab subjects.''
+  \lnSource{malavolta2023javascript}
+  \end{multicols}}
+
+\plush{
   \pptBanner{Volatility Metric}
   \begin{multicols}{2}
   \scalebox{.7}{\begin{tikzpicture}[every node/.style={rectangle, minimum width=1em, fill=gray, anchor=south west, font={\color{white}}, inner sep=0pt}]
