--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -117,6 +117,12 @@ void main(int x) {
   \lnSource{malavolta2023javascript}
   \end{multicols}}
 
+\lnQuote
+  [Rui Abreu]
+  {rui-abreu}
+  {At \textcolor{orange}{Meta}, in the last year alone, we removed petabytes of data across 12.8 million distinct assets, and deleted over 104 million lines of code.}
+  {shackleton2023dead}
+
 \lnPitch{
   \pptBanner{Volatility Metric}
   \begin{multicols}{2}
