--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -118,8 +118,8 @@ void main(int x) {
   \end{multicols}}
 
 \lnQuote
-  [Rui Abreu]
-  {rui-abreu}
+  [Katriel Cohn-Gordon]
+  {katriel-cohn-gordon}
   {At \textcolor{orange}{Meta}, in the last year alone, we removed petabytes of data across 12.8 million distinct assets, and deleted over 104 million lines of code.}
   {shackleton2023dead}
 
