--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -109,6 +109,12 @@ void main(int x) {
   \lnSource{caivano2021exploratory}
   \end{multicols}}
 
+\lnQuote
+  [Pietro Cassieri]
+  {pietro-cassieri}
+  {The results indicate that, after removing dead methods, the \ul{internal structure} of the source code significantly \ul{improves}, while the \ul{space} to store executable code significantly decreases along with the time to compile source code.}
+  {romano2024folklore}
+
 \lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=\linewidth]{js-deads.png}
