--- a/00-syllabus/00-syllabus.tex
+++ b/00-syllabus/00-syllabus.tex
@@ -120,23 +120,24 @@ Prerequisites to the course (it is expected that a student knows this):
 After the course, students \emph{hopefully} will understand:
 
 \begin{itemize}
-\item How to make their bug reports appreciated?
-\item How to make their pull requests merged?
-\item How to reject a pull request politely?
-\item How to become an active contributor of a large repository?
-\item How to keep up with GitHub etiquette?
-\item How to invite and motivate contributors?
-\item How to deal with frustration during code reviews?
-\item How to avoid stale pull requests (never merged)?
-\item How to use GitHub Actions effectively?
-\item How to format the \texttt{README.md} file?
-\item How to control quality and avoid chaos in a public repository?
-\item How to use GitHub account in lieu of a C.V.?
-\item How to get 100 stars?
-\item How to release in one click?
-\item How to employ ChatGPT as a coding companion?
-\item How to get 10K stars?
-\item How to earn money via open source?
+\item How to measure code size?
+\item How to keep complexity under control?
+\item How to simplify code for the sake of readability?
+\item How to motivate programmers write code of higher quality?
+\item How to reduce coupling between modules?
+\item How to aim for higher cohesion?
+\item How to convince a manager that quality matters?
+\item How to decrease code duplication?
+\item How to reduce the amount of dead/unused code?
+\item How to fight with tech debt?
+\item How to employ mutation testing to increase quality?
+\item How to comment code correctly?
+\item How to automate builds effectively?
+\item How to check code style?
+\item How to find bugs without running the code?
+\item How to keep Git history in order?
+\item How to use Machine Learning for code analysis?
+\item How to employ LLMs for code quality analysis?
 \end{itemize}
 
 \newpage
