--- a/00-syllabus/00-syllabus.tex
+++ b/00-syllabus/00-syllabus.tex
@@ -130,6 +130,7 @@ After the course, students \emph{hopefully} will understand:
 \item How to decrease code duplication?
 \item How to reduce the amount of dead/unused code?
 \item How to fight with tech debt?
+\item How to automate software analysis?
 \item How to employ mutation testing to increase quality?
 \item How to comment code correctly?
 \item How to automate builds effectively?
