--- a/13-code-churn/13-code-churn.tex
+++ b/13-code-churn/13-code-churn.tex
@@ -106,7 +106,7 @@ Delta: \textcolor{green}{+3} / 0, Churn: \textcolor{green}{+7} / \textcolor{red}
 \includegraphics[width=.7\columnwidth]{qtb.png}
 \par\columnbreak\par
 ``A limitation of measuring code deltas is that it
-doesn’t give an indicator as to how much change the
+\ul{doesn't} give an indicator as to how much change the
 system has undergone. If several
 software modules are removed and are replaced by
 modules of roughly equivalent complexity, the code
@@ -146,15 +146,9 @@ delta for the system will be close to zero.''
 \begin{multicols}{2}
 \includegraphics[width=.9\columnwidth]{hitsofcode.png}
 \par\columnbreak\par
-Created by \href{https://www.vbrandl.net/}{Valentin Brandl} (@vbrandl)
-and inspired by the blog post of mine:
-\href{https://www.yegor256.com/2014/11/14/hits-of-code.html}{Hits-of-Code Instead of SLoC} (2014)
+Created by \href{https://www.vbrandl.net/}{Valentin Brandl} (\href{https://github.com/vbrandl}{@vbrandl})
+and inspired by the blog post of mine~\citep{bugayenko2014blog1114}.
 \end{multicols}
 \plush{}
-
-\plush{
-  \pptBanner{Read this:}\par
-  \href{https://www.yegor256.com/2014/11/14/hits-of-code.html}{Hits-of-Code Instead of SLoC} (2014) \par
-}
 
 \end{document}
