--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -108,6 +108,14 @@
 
 \lnThought{In 2011, Uncle Bob \href{https://softwareengineering.stackexchange.com/questions/66523}{suggested} that 200 lines per Java class is a good guideline to stay below.}
 
+\plush{
+  \begin{multicols}{2}
+  \includegraphics[width=\linewidth]{size-vs-testing.png}
+  \par\columnbreak\par
+  ``We conclude that code size is not a good predictor of testing effort (measured by allocated test engineers) at either product or product line levels. Other metrics, like code coupling and cohesion are more appropriate for such estimation.''\par
+  \lnSource{ajila2007experimental}
+  \end{multicols}}
+
 \lnThought{Instead of counting lines, it may be more reasonable to count NCSS (Non Commenting Source Statements), but not always.}
 
 \pptBanner{LoC vs NCSS}
