--- a/13-code-churn/13-code-churn.tex
+++ b/13-code-churn/13-code-churn.tex
@@ -133,6 +133,14 @@ Delta: \textcolor{green}{+3} / 0, Churn: \textcolor{green}{+7} / \textcolor{red}
   {Our case study provides strong support for the following conclusion: increase in relative code churn measures is accompanied by an increase in system \ul{defect density}.}
   {nagappan2005use}
 
+\plush{
+  \begin{multicols}{2}
+  \includegraphics[width=\linewidth]{turnover.png}
+  \par\columnbreak\par
+  ``During the pre-release phase, there seems to be a positive relationship between \textcolor{orange}{designer turnover} and the \textcolor{orange}{impact of change} (i.e., the ratio between code churn and product growth for a particular product). A similar relationship does not seem to hold for post-release changes.''\par
+  \lnSource{ajila2007experimental}
+  \end{multicols}}
+
 \lnQuote
   [Rudolf Ferenc]
   {rudolf-ferenc}
